# rusttracer

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  flake.nix  readme.md  rust-toolchain.toml  rustfmt.toml  todo.md
.cargo/: config.toml
data/: brilliant_diamond.mtl
images/: rt.ppm
lib/geometry/: Cargo.toml
lib/geometry/src/: aabb.rs  bvh.rs  hit.rs  lib.rs  point.rs  ray.rs  sphere.rs  unit_vec.rs  utils.rs  vec.rs
libs/math/: Cargo.toml
libs/math/src/: aabb.rs  hit.rs  lib.rs  matrix.rs  matrix4.rs  mesh.rs  normal.rs  point.rs  quad.rs  ray.rs  sphere.rs  transform.rs  unit.rs  unit_vec.rs  unit_vec4.rs  utils.rs  vec.rs  vec4.rs
src/: camera.rs  intersection.rs  lib.rs  main.rs  material.rs  object.rs  primitive.rs  render.rs  scene.rs  utils.rs
src/aggregates/: aabb.rs  bvh.rs  mod.rs
src/bxdf/: bsdf.rs  bxdf.rs  conductor.rs  dielectric.rs  diffuse.rs  mod.rs  utils.rs
src/config/: camera_config.rs  mod.rs
src/core/: hit.rs  interaction.rs  mod.rs  ray.rs  surface_interaction.rs
src/geometry/: aabb.rs  bvh.rs  hit.rs  mesh.rs  mod.rs  point.rs  quad.rs  ray.rs  sphere.rs  unit_vec.rs  utils.rs  vec.rs
src/integrators/: debug_normal.rs  mod.rs  normal.rs  path.rs  random_walk.rs  ray.rs  ray_integrator.rs  simple_path.rs  tile.rs  tile_integrator.rs
src/light/: base.rs  diffuse_area.rs  light_sampler.rs  mod.rs  point.rs  spotlight.rs  uniform_sampler.rs
src/material/: dielectric.rs  diffuse_light.rs  glass.rs  isotropic.rs  lambertian.rs  matte.rs  metal.rs  mod.rs
src/math/: axis.rs  bounds.rs  frame.rs  matrix.rs  matrix3.rs  matrix4.rs  mod.rs  normal.rs  point.rs  point2.rs  point3.rs  transform.rs  unit.rs  utils.rs  vec.rs  vec2.rs  vec3.rs  vec4.rs
src/mediums/: mod.rs
src/rendering/: antialiasing.rs  mod.rs  raytracer.rs
src/samplers/: independent.rs  mod.rs  stratified.rs  utils.rs
src/scene/: camera.rs  film.rs  intersection.rs  mod.rs  object.rs  old_camera.rs  primitive.rs  scene.rs
src/scene/cameras/: base.rs  mod.rs  orthographic.rs  perspective.rs  projective.rs
src/scene/primitives/: geometric.rs  mod.rs  simple.rs
src/shapes/: mesh.rs  mesh_new.rs  mod.rs  quad.rs  sphere.rs
src/spectra/: blackbody.rs  cie.rs  constant.rs  densely_sampled.rs  gamut.rs  mod.rs  named.rs  piecewise_linear.rs  rgb.rs  rgb2spec.rs  rgb_color.rs  rgb_spectrum.rs  sampled_spectrum.rs  sampled_wavelengths.rs  xyz.rs
src/test_scenes/: cornell_box.rs  cubes.rs  mod.rs  spheres.rs  teapot.rs
src/textures/: checkerboard.rs  constant.rs  mappings.rs  mod.rs
