[package]
name = "rusttracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
approx-derive = "0.1.3"
derive-new = "0.6.0"
derive-where = "1.2.7"
derive_more = { version = "1.0.0-beta.6",features = ["full"] }
env_logger = "0.11.3"
gen_ops = "0.4.0"
image = { version = "0.25.1", features = ["rayon"] }
indicatif = "0.17.8"
itertools = "0.12.1"
log = "0.4.21"
num-traits = "0.2.19"
rand = { version = "0.9.0-alpha.1", features = ["small_rng"] }
rayon = "1.10.0"
strum = "0.26.2"
strum_macros = "0.26.2"

# TODO:
#minifb = "0.25.0"

obj = "0.10.2"
# tobj = "4.0.2"
# obj-rs = "0.7.1"

#serde = { version = "1.0.201", features = ["derive"] }
#serde_json = "1.0.117"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
#lto = "fat"
#lto = "thin"
