[package]
name = "math"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-new = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
obj = { workspace = true }
approx = { workspace = true }
approx-derive = { workspace = true }
derive_more = { workspace = true }
derive-where = { workspace = true }
gen_ops = { workspace = true }
num-traits = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
